--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react-native/all",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+     "plugin:node/recommended"
   ],
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
